kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/ExplicitFieldGettersAndSetters.kt
package test

import java.util.*

public open class ExplicitFieldGettersAndSetters {
    public var foo : String? = ""
}
